src/test/resources/fixtures/security/malware-patterns.php
<?php
    // See also: https://github.com/elcodigok/wphardening
    // See also: https://github.com/gwillem/magento-malware-collection

    function <error descr="This function looks pretty much as part of some malware.">decode1</error>($injectedCode) {
        $whatever = 'base64_decode';
        $whatever = 'gzinflate';
        $whatever = 'urldecode';
        return @(@$whatever($injectedCode));
    }
    function <error descr="This function looks pretty much as part of some malware.">decode2</error>($injectedCode) {
        $whatever = $injectedCode;
        return base64_decode($whatever);
    }
    function <error descr="This function looks pretty much as part of some malware.">decode3</error>($injectedCode) {
        $whatever = $injectedCode;
        return gzinflate($whatever);
    }
    function <error descr="This function looks pretty much as part of some malware.">decode4</error>($injectedCode) {
        $whatever = $injectedCode;
        return urldecode($whatever);
    }
    function <error descr="This function looks pretty much as part of some malware.">decode5</error>($injectedCode) {
        $whatever = $injectedCode;
        return gzuncompress($whatever);
    }

    <error descr="This eval looks pretty much as some malware.">eval(gzinflate())</error>;
    <error descr="This eval looks pretty much as some malware.">eval(@base64_decode())</error>;
    <error descr="This eval looks pretty much as some malware.">eval(@(urldecode()))</error>;
    <error descr="This eval looks pretty much as some malware.">eval(@(@file_get_contents()))</error>;
    <error descr="This eval looks pretty much as some malware.">eval(@@(curl_exec()))</error>;
    <error descr="This eval looks pretty much as some malware.">eval(strrev())</error>;
    <error descr="This eval looks pretty much as some malware.">eval(str_rot13())</error>;

    <error descr="This looks pretty much as some malware hiding files manipulation.">touch</error> ('', time(), time());

    /* false-positives */
    touch('', time());
    touch('');
    eval(json_decode());
    eval(unserialize());
    eval(file_get_contents('php://input'));